# kochbuch-v2

./: .gitignore  DB Changes.md  Dockerfile  LICENSE  README.md  database.sql  nginx.conf
Kochbuch-v2 ChatGPT API/: .gitignore  Create assistant.bru  Delete assistant.bru  List assistants.bru  bruno.json
backend/: Cargo.toml  dbconfig.yml  go.mod  go.sum  main.go
backend/.sqlx/: query-e77bab2488cf28575ca3da743bd2e25cca4ba4d3687f84c66f37ca5a7004c611.json
backend/api/: categories.go  errorreport.go  general.go  index.go  login.go  recipes.go  units.go  user.go
backend/cache/: cache.go
backend/migrations/: 20250223173519-Patch_0.sql  20250223174228-Patch_1.sql  20250223174741-Patch_2.sql  20250223175325-Patch_3.sql  20250224191734-Patch_4.sql  20250227175658-Patch_5.sql  20250303160412-Patch_6.sql  20250304192812-Patch_7.sql  20250306165310-Patch_8.sql  20250628183227-Patch_9.sql  20250629145911-Patch_010.sql.sql  20250629205131-Patch_011.sql  20250629220621-Patch_012.sql  20250705134251-Patch_013.sql  20250706140724-Patch_014.sql  20250706150555-Patch_015.sql
backend/services/: ai.go  cache.go  collections.go  db.go  files.go  hash.go  messaging.go  nc.go  thb.go
backend/src/: logging.rs  main.rs  types.rs
backend/src/api/: index.rs  mod.rs  recipes.rs
backend/types/: ai.go  category.go  collection.go  common.go  ingredient.go  picture.go  preparation.go  recipe.go  unit.go  user.go
docker/: .gitignore  build-and-run.bat  build-and-run.bat.template  build.bat
frontend/: angular.json  package.json  pnpm-lock.yaml  proxy.json
frontend/src/: index.html  (+1 more)
(+54 files in other folders)
