[package]
name = "kochbuch"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio",
    "macros",
    "chrono",
    "bigdecimal",
] }
chrono = { version = "0.4", features = ["serde"] }
